# roop

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clean.sh  cmake_install.cmake  rebuild-all.sh
docs/: Functions.md
ide/RoopIDE/: RoopIDE.pro  main.cpp  roopcommand.h  roopcommon.cpp  roopcommon.h  roopconstants.h  roopenvironment.cpp  roopenvironment.h  roopenvironment.ui  roopsyntaxhighlighter.cpp  roopsyntaxhighlighter.h  syntaxkeywords.cpp  syntaxkeywords.h
idehelper/: generate-keyword-list.sh  generate-pattern.py  keyword-pattern.txt  keywords.txt
images/: .gitignore  Hi.ppm  bullseye.ppm
roopscripts/: buildingops.cvl  centroid-test.cvl  demo2.cvl  demo3.cvl  editortest.cvl  erodedblend.cvl  erosion.cvl  exercise-3-6.cvl  find-connected.cvl  gamma-correct-test.cvl  init.cvl  save-test.cvl  sobel-test.cvl  transformtest.cvl  videmo1.cvl
src/: AddImage.cpp  Blend.cpp  Blur.cpp  Blurrer.cpp  Blurrer.h  CMakeLists.txt  Canny.cpp  ColorConversions.cpp  ConnectedComponents.cpp  DefGet.cpp  Derivative.cpp  DilateImage.cpp  DisplayImage.cpp  EnhanceContrast.cpp  ErodeImage.cpp  ExecutableCommand.cpp  ExecutableCommand.h  FileOperations.cpp  Filter3.cpp  ForEachPixel.cpp  ForEachPixel.h  Interactive.cpp  LoadImage.cpp  LogicalOperations.cpp  MorphologicalOperations.cpp  MorpohologicalOperations.cpp  Multiply.cpp  Operator.cpp  Roop.cpp  RoopCommon.cpp  RoopCommon.h  Segmentation.cpp  ShapeAnalysis.cpp  Sharpen.cpp  SubtractImage.cpp  ToGrayScale.cpp  Transform.cpp  Transform.h
